# django_trx_dashboard

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  build.sh  check_db.py  load_demo_data.py  package.json  portfolio.db  pyproject.toml  pytest.ini  render.yaml  reset_users.py  tailwind.config.js  test_api.py
authentication/: api.py  auth.py  signals.py
backend/: .gitignore  CLEANUP_NEEDED.md  README.md  pyproject.toml  test_api.py
backend/authentication/: api.py  auth.py
backend/config/: settings.py  urls.py  wsgi.py
backend/core/: urls.py  views.py
backend/core/management/commands/: generate_mock_data.py
backend/portfolio/: api.py  cache.py  services.py  sse.py
backend/templates/: base.html  dashboard.html
backend/templates/forms/: add_wallet.html
backend/templates/partials/: transaction_rows.html  transaction_table.html  wallet_list.html
backend/transactions/: admin.py  api.py  models.py
backend/transactions/migrations/: 0002_initial.py
backend/wallets/: admin.py  api.py  apps.py  models.py
backend/wallets/migrations/: 0001_initial.py
config/: settings.py  test_settings.py  urls.py  wsgi.py
core/: realtime_simulation.py  root_urls.py  test_views.py  tests.py  tests_htmx_ui.py  urls.py  views.py
core/management/commands/: generate_investigation_data.py  generate_mock_data.py  generate_portfolio_cases.py
docs/: testing.md
fixtures/: portfolio.json  transactions.json  wallets.json
frontend/: .eslintrc.json  index.html  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: index.html
frontend/src/css/: components.css  input.css
frontend/src/js/: main.js  portfolio-chart.js
frontend/src/js/__tests__/: portfolio-chart.test.js  real-time-manager.test.js  transaction-table.test.js
frontend/src/templates/: dashboard.html  login.html
frontend/src/templates/components/: portfolio-summary.html  transaction-table.html
portfolio/: admin.py  api.py  cache.py  models.py  services.py  sse.py  tests.py
portfolio/management/commands/: check_data.py
portfolio/migrations/: 0001_initial.py  0002_alter_casewallet_case_alter_casewallet_wallet.py
scripts/: clean_git_history.sh  create_fixtures.sh  deploy_with_demo.sh  portfolio_demo.db.README  run_htmx_tests.sh  test.py
static/css/: output.css
static/js/: app.js  dashboard-app.js  dashboard-chart.js  htmx-config.js  main.js  portfolio-chart.js  real-time-manager.js  transaction-table.js
templates/: README.md  app.html  app_dark.html  base.html  base_dark.html  dashboard.html  dashboard_dark.html  login.html  sse_demo.html  welcome.html
templates/forms/: add_wallet.html  add_wallet_dark.html  login.html  login_modal.html  register.html
templates/partials/: case_dashboard_working.html  case_form.html  case_transactions.html  cases_grid.html  cases_list.html  dashboard_chart.html  dashboard_content.html  dashboard_crypto_dark.html  dashboard_dark.html  dashboard_tabs.html  investigation_cases.html  metric_card.html  nav_authenticated.html  nav_unauthenticated.html  portfolio_sse.html  portfolio_summary.html  recent_activity.html  settings_dark.html  settings_page.html  test_chart_data.html  transaction_filters.html  transaction_row.html  transaction_rows.html  transaction_table.html  transactions_dark.html  transactions_page.html  transactions_table.html  wallet_item.html  wallet_item_dark.html  wallet_list.html  wallets_dark.html  wallets_page.html  welcome.html
tests/: README.md  conftest.py  factories.py  test_integration.py
transactions/: admin.py  api.py  models.py  tests.py
transactions/migrations/: 0001_initial.py  0002_initial.py
wallets/: admin.py  api.py  models.py  tests.py
wallets/management/commands/: enable_mock_data.py
wallets/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_usersettings.py  0004_add_dark_theme_preference.py  0005_remove_dark_theme_field.py  0006_wallet_is_monitored_wallet_notes.py
